优化代码，去除idea警告